--- a/src/app/pages/authentication-page/authentication-page.component.html
+++ b/src/app/pages/authentication-page/authentication-page.component.html
@@ -66,7 +66,7 @@
           </div>
   
           <div class="links">
-            <a href="#">{{optionHeading}}</a>
+            <a routerLink="routeName">{{optionHeading}}</a>
           </div>
   
           <div class="inputBox">
