--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
-
 body{
     width: 100%;
     background-color: var(--bg-color);
     overflow-x: hidden;
+    font-family: 'Quicksand', sans-serif;
 }
 
 :root{
